--- a/src/Capture.css
+++ b/src/Capture.css
@@ -252,4 +252,26 @@ button:hover {
   z-index: -1;
   width: 100%;
   opacity: 0.2;
+  position: absolute;
+}
+
+.main__header {
+  /* font-size: 170px; */
+  background: linear-gradient(to right, #c14874, #be3265, #6c2874, #511958);
+  background-size: 100% 100%;
+  animation: wave 10s ease infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+@keyframes wave {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
