--- a/src/Capture.css
+++ b/src/Capture.css
@@ -219,8 +219,17 @@ button:hover {
 .img--container {
   overflow: hidden;
   border-radius: 12px;
-  width: 300%;
+  width: 100%;
+  height: 300px;
   display: flex;
+  background-image: url("/suiii.jpg");
+  padding: 32px;
+  box-sizing: border-box;
+}
+
+.img-text {
+  display: flex;
+  flex-direction: column;
 }
 
 .page6__cards-container {
